--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body {
   background-repeat: no-repeat;
   color: white;
   text-align: center;
-  height: 100vh;
+  height: 80vh;
   width: 100%;
 }
 .overlay {
-  height: 100vh;
+  height: 80vh;
   background: rgba(0, 0, 0, 0.596);
 }
 
@@ -32,7 +32,7 @@ body {
 
 .top h1 {
   font-size: 2.5rem;
-  padding-top: 10rem;
+  padding-top: 6rem;
 }
 
 h1 span {
@@ -84,6 +84,7 @@ input[type="text"] {
   padding: 1em;
   border-radius: 0.5em;
   margin-top: 1em;
+  width: 90%;
 }
 
 .form-container p {
@@ -102,8 +103,8 @@ input[type="submit"] {
   cursor: pointer;
   height: fit-content;
   font-size: 1.1em;
-  margin-top: 3em;
-  padding: 0.7em 0.2em;
+  margin-top: 3.2em;
+  padding: 0.6em 0.2em;
   width: 30%;
 }
 
@@ -118,7 +119,6 @@ h2 {
 
 .results-container {
   margin-top: 2rem;
-  border: 2px solid black;
 }
 .random-btn {
   display: none;
@@ -164,12 +164,23 @@ h2 {
   background-color: #bd7d23;
 }
 
+/*....Popup Open...*/
+
+.modal {
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  max-width: 100%;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 .single-meal {
-  border: 2px solid red;
   margin: 30px auto;
-  width: 70%;
+  width: 100%;
+  padding: 0 3rem;
   text-align: center;
-  padding: 2rem 10rem;
 }
 
 .single-meal h1 {
@@ -181,28 +192,31 @@ h2 {
 }
 
 .single-meal img {
-  width: 300px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.4);
   border-radius: 2px;
   margin: 1rem auto;
+  width: 300px;
 }
 
 .single-meal-info {
   padding: 0.8rem;
   border: 2px #f89104 dashed;
   border-radius: 5px;
-  margin-bottom: 1.5rem;
+  margin-left: 10rem;
+  margin-right: 10rem;
 }
 
 .single-meal p {
-  margin: o;
+  margin: 10px auto;
   letter-spacing: 0.5px;
   line-height: 1.5;
 }
 
 .single-meal ul {
-  padding-left: 0;
   list-style-type: none;
+  width: 80%;
+  text-align: center;
+  margin: 10px auto;
 }
 
 .single-meal ul li {
