--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   height: 80vh;
   width: 100%;
 }
+
 .overlay {
   height: 80vh;
   background: rgba(0, 0, 0, 0.596);
@@ -102,26 +103,25 @@ input[type="submit"] {
   border-radius: 0.5em;
   cursor: pointer;
   height: fit-content;
-  font-size: 1.1em;
-  margin-top: 3.2em;
-  padding: 0.6em 0.2em;
-  width: 30%;
+  font-size: 1em;
+  margin-top: 3.6rem;
+  padding: 0.8rem;
+  width: 40%;
 }
 
 input[type="submit"]:hover {
   background-color: rgb(216, 126, 1);
 }
 
+/*.....Results Content....*/
+.results-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 h2 {
   color: #f89104;
   padding: 0 1.5rem;
-}
-
-.results-container {
-  margin-top: 2rem;
-}
-.random-btn {
-  display: none;
 }
 
 .meals {
@@ -168,12 +168,6 @@ h2 {
 
 .modal {
   background-color: #fff;
-  border-radius: 5px;
-  overflow: hidden;
-  max-width: 100%;
-  animation-name: modalopen;
-  animation-duration: var(--modal-duration);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .single-meal {
@@ -233,14 +227,102 @@ h2 {
 
 /*...........Media Queries......................*/
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-2em);
+@media only screen and (max-width: 1086px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
   }
 
-  to {
-    opacity: 1;
-    transform: translateY(0);
+  .meal {
+    max-height: 500px;
+    max-width: 300px;
+    margin: 0 auto;
   }
+
+  input[type="submit"] {
+    padding: 0.8em;
+    font-size: 1em;
+    margin-top: 3.6rem;
+    width: 40%
+  }
+
 }
+
+@media only screen and (max-width: 929px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .meal {
+    max-height: 500px;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .form-container {
+    margin: 0;
+    padding: 2em;
+    border-radius: 0px;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .top {
+    width: 100%;
+    text-align: center;
+    margin-left: 0;
+  }
+
+  label {
+    text-align: left;
+    font-size: 1.3em;
+  }
+
+  input[type="text"] {
+    margin-right: 65px;
+  }
+
+  input[type="submit"] {
+    padding: 0.8em 0.2em;
+
+  }
+
+
+  /* Small phones to small tablets: from 0px to 729px */
+  @media only screen and (max-width: 729px) {
+    .top {
+      width: 100%;
+      text-align: center;
+      margin-left: 0;
+    }
+
+    .form-container {
+      margin: 0;
+      padding: 2em;
+      border-radius: 0px;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    .meals {
+      grid-template-columns: 1fr;
+    }
+
+    .meal {
+      max-height: 500px;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-2em);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
